# pyGUS

./: .travis.yml  300dpi.xcf  README.md  build.ps1  cv2.ipynb  demo.py  extract_info.py  global_vars.py  main.py  old.py  pyproject.toml  quantify_color.ipynb  redraw.py  remove_yellow.ipynb  requirements.txt  setup.py  stats.py  stats_input.csv  test.csv  test.py  ui.tcl  utils.py
example/: 0-1.tif  42℃ 3h-2.tif  ninanjie-0-1.tif  ninanjie-100-1.tif  ninanjie-100-2.tif  ninanjie-2h-3.tif  ninanjie-50-1.tif  ninanjie-75-1.tif  ninanjie-75-2.tif  ninanjie-ok-75-2.tif
pyGUS/: __main__.py  cfm.py  core.py  deprecated.py  global_vars.py  main.py  test.py  ui.py  ui_support.py  utils.py
src/pyGUS/: __main__.py  core.py  ui.py  utils.py
