[project]
include = ["example/*"]
name = "pyGUS_bio"
version = "1.8"
description = "Quantify GUS Stain Images"
authors = [
    {name = "Ping Wu", email = "wpwupingwp@outlook.com"},
]
dependencies = [
    "colour-science==0.4.4",
    "coloredlogs==15.0.1",
    "matplotlib==3.5.2",
    "numpy==1.24.2",
    "opencv-contrib-python==4.8.1.78",
    "scipy==1.9.3",
    "tqdm==4.66.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GNU AGPL v3"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/wpwupingwp/pyGUS"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

